# QQQ5Calibration

./: CMakeLists.txt
include/: EffectiveThickness.h  EnergyLoss.h
src/: EffectiveThickness.cpp  QQQ5EnCal.cpp
